--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
   
   
   <!-- Controls -->
+  
   <div>
 
   <a class="left carousel-control" href="file:///C:/Users/Purnima/Desktop/MyDocuments/clients/NoelFuller/html/index.html#carousel" role="button" data-slide="prev">
@@ -158,6 +159,13 @@
     <!--End of Carousel-->  
 
   </div>
+  
+         <div class="news">
+        <h1>Prep Begins NOW</h1>
+        <h2>Diet, nutrition, posing sessions, and all the guidance you'll need to get prepared for the 2016 season!</h2>
+        <a class="button" href="#">Start Now</a>
+        
+    </div>
   
   
   
@@ -233,7 +241,12 @@
    </footer>
    
   
-   <div class="npc-oregon-logo"><a href="http://www.npcoregon.com/" target="_blank"><img src="img/logo-npc-news-oregon.png" alt="NPC Oregon Logo"><span class="footer-copy">NPC Oregon</span></a></div>
+   <div class="npc-oregon-logo"><a  href="http://www.npcoregon.com/" target="_blank">
+   
+   
+   <img src="img/logo-npc-news-oregon.png" alt="NPC Oregon Logo"/><span class="footer-copy">NPC Oregon</span></a></div>
+   
+   
    <div class="md-logo"><a href="http://www.musculardevelopment.com/" target="_blank"><img src="img/logo-md.png" alt="Muscular Development Logo"><span class="footer-copy">Muscluar Development</span></a></div>
    
    <div class="npc-logo"><a href="http://npcnewsonline.com/" target="_blank"><img src="img/logo-npc-news-online.png" alt="NPC Logo"><span class="footer-copy">NPC News Online</span></a></div>
@@ -246,12 +259,16 @@
    
    <div class="gray-block-footer-2"></div>
         
-        <script src="./index_files/jquery.js"></script>
-        <script src="./index_files/jquery.min.js"></script>
+   
+
+ <script src="//code.jquery.com/jquery.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="./index_files/plugins.js"></script>
-        <script src="./index_files/main.js"></script>
-        <script src="./index_files/bootstrap.min(1).js"></script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
