Final Website Template Finished

--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
    <div><a href="index.html"><img src="img/NoelFuller-logo.png" class="footer-logo" alt="logo"></a></div>
    
    <div class="footer-links">
-        <ul>
+        <ul id="footer-links">
+        
         
         <li><a href="training.html">Training</a></li>
         <li><a href="champions.html">Champions</a></li>
